<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_desc">An Open-Source HTTP Media Stream Browser and Player.</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
	<string name="media_service_desc">"Allows media to play in the background"</string>
	<string name="help_intro">Please select a topic below for more information on a particular subject.</string>
	<string name="bind_never">Never connected</string>
	<string name="bind_minutes">%1$s minutes ago</string>
	<string name="bind_hours">%1$s hours ago</string>
	<string name="bind_days">%1$s days ago</string>
	<string name="cannot_play_media_title">Cannot play media file</string>
	<string name="cannot_play_media_message">Sorry, this media file cannot be played.</string>
	<string name="cannot_play_media_pos">OK</string>
	<string name="delete_message">Are you sure you want to delete \'%1$s\'?</string>
	<string name="delete_pos">Yes, delete</string>
	<string name="delete_neg">Cancel</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
	<string name="find_barcode_scanner_message">This feature requires the ZXing barcode scanner. Find this application?</string>
	<string name="find_pos">Yes</string>
	<string name="find_neg">No</string>
	<string name="invalid_playlist_title">Cannot play playlist file</string>
	<string name="invalid_playlist_message">Sorry, the selected playlist file has no valid entries.</string>
	<string name="invalid_playlist_pos">OK</string>
	<string name="invalid_url_message">Enter a valid URL</string>
	<string name="url_not_opened_message">The url could not be opened.</string>
	<string name="save_message">Are you sure you want to save \'%1$s\'?</string>
	<string name="save_pos">Yes, save</string>
	<string name="save_neg">Cancel</string>
	<string name="share_signature">%1$s \n\n\n\nSent using %2$s</string>
	<string name="view_pos">OK</string>
 	<string name="list_sleep_timer_off">Off</string>
 	<string name="list_sleep_timer_ten_min">10 minutes</string>
 	<string name="list_sleep_timer_twenty_min">20 minutes</string>
 	<string name="list_sleep_timer_thirty_min">30 minutes</string>
 	<string name="list_sleep_timer_fourty_min">40 minutes</string>
 	<string name="list_sleep_timer_fifty_min">50 minutes</string>
 	<string name="list_sleep_timer_sixty_min">60 minutes</string>
    <string name="add_to_playlist">Add to playlist</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
	<string name="share">Share</string>
	<string name="view_url">View URL</string>
	<string name="list_stream_empty">Use the quick-connect box\nabove to open a media stream.</string>
    <string name="list_menu_help">Help</string>
    <string name="list_menu_now_playing">Now playing</string>
	<string name="list_menu_refresh">Refresh</string>
	<string name="list_menu_repeat">Repeat</string>
	<string name="list_menu_scan">Scan</string>
	<string name="list_menu_settings">Settings</string>
    <string name="list_menu_shuffle">Shuffle on/off</string>
    <string name="list_menu_sleep_timer">Sleep timer</string>
 	<string name="list_update_daily">Daily</string>
 	<string name="list_update_weekly">Weekly</string>
 	<string name="list_update_never">Never</string>
	<string name="loading_message">Loading. Please wait...</string>
    <string name="menu_sleep_timer">Sleep Timer</string>
	<string name="notification_artist_album" msgid="2128095771677061443">"<xliff:g id="ALBUM">%2$s</xliff:g>" - "<xliff:g id="ARTIST">%1$s</xliff:g>"</string>
	<string name="nowplaying_title">Now playing</string>
	<string name="opening_url_message">Opening URL...</string>
    <string name="playback_failed">Sorry, the player does not support this type of media file.</string>
	<string name="pref_general_settings_category">General settings</string>
	<string name="pref_playback_category">Playback settings</string>
	<string name="pref_social_media_category">Social media settings</string>
	<string name="pref_ui_category">User interface</string>
	<string name="pref_autosave_title">Autosave streams</string>
	<string name="pref_autosave_summary">Automatically save entered streams</string>
	<string name="pref_progressivedownload_title">"Progressive download"</string>
	<string name="pref_progressivedownload_summary">"Use progressive download for playback"</string>
	<string name="pref_retrievemetadata_title">"Retrieve metadata"</string>
	<string name="pref_retrievemetadata_summary">"Read and display metadata (for supported file types)"</string>
	<string name="pref_retrieveshoutcastmetadata_title">"Retrieve SHOUTcast metadata"</string>
	<string name="pref_retrieveshoutcastmetadata_summary">"Read and display metadata for SHOUTcast streams (experimental)"</string>
	<string name="pref_sendscrobblerinfo_title">"Send scrobbler info"</string>
	<string name="pref_sendscrobblerinfo_summary">"Enable support for Last.fm's Scrobbler service. Must have \"Simple LastFM Scrobbler\" installed."</string>
	<string name="pref_update_title">Update check</string>
	<string name="pref_update_summary">Set the maximum frequency to check for ServeStream updates</string>
	<string name="pref_wakelock_title">Screen wake lock</string>
	<string name="pref_wakelock_summary">Keep screen from dimming or going to sleep</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current media</string>
    <string name="repeat_all_notif">Repeating all media</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the media could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="sleep_timer_on_notif">Sleep timer is set for</string>
    <string name="sleep_timer_off_notif">Sleep timer is off</string>
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>
	<string name="streampref_nickname_title">Nickname</string>
	<string name="streampref_connection_category">Connection settings</string>
	<string name="streampref_protocol_title">Protocol</string>
	<string name="streampref_username_title">Username</string>
	<string name="streampref_password_title">Password</string>
	<string name="streampref_hostname_title">Hostname</string>
	<string name="streampref_port_title">Port</string>
	<string name="streampref_path_title">Path</string>
	<string name="streampref_query_title">Query</string>
	<string name="streampref_reference_title">Reference</string>
    <string name="text_go_button">Go</string>
	<string name="title_help">Help</string>
	<string name="title_now_playing">Now Playing</string>
	<string name="title_share">Share via</string>
	<string name="title_url_list">URLs</string>
	<string name="title_stream_browse">Browse Streams</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
	<string name="unsupported_scanned_intent_message">The scanned QR code did not return a supported URL</string>
	<string name="unsupported_pos">OK</string>
	<string name="upgrade">"New version"</string>
	<string name="upgrade_pos">"Yes, upgrade"</string>
	<string name="upgrade_neg">"Not right now"</string>
	<string name="widget_one_initial_text">"Touch to select media."</string>
	<string name="widget_one_track_info_unavailable">"No track info available"</string>
	<string name="title_alarm_clock">Alarm Clock</string>
	<string name="title_set_alarm">Set Alarm</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="app_label">Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Select a clock to display.</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>30 minutes</item>
    </string-array>
</resources>