<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ServeStream: A HTTP stream browser/player for Android
 * Copyright 2010 William Seemann
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:key="enabled"
        android:persistent="false"
        android:title="@string/enable_alarm" />
    <Preference android:key="time"
        android:persistent="false"
        android:title="@string/time"/>
    <net.sourceforge.servestream.alarm.RepeatPreference
        android:persistent="false"
        android:key="setRepeat"
        android:title="@string/alarm_repeat" />
    <net.sourceforge.servestream.alarm.AlarmPreference
        android:key="alarm"
        android:title="@string/alert"
        android:ringtoneType="alarm"
        android:persistent="false"
        android:showDefault="false"
        android:showSilent="true" />
    <CheckBoxPreference android:key="vibrate"
        android:persistent="false"
        android:title="@string/alarm_vibrate"/>
    <EditTextPreference android:key="label"
        android:persistent="false"
        android:title="@string/label"
        android:dialogTitle="@string/label" />
</PreferenceScreen>
