<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ServeStream: A HTTP stream browser/player for Android
 * Copyright 2010 William Seemann
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_shuffle"
        android:title="@string/list_menu_shuffle"
        android:icon="@drawable/ic_menu_shuffle"/>
    <item android:id="@+id/menu_item_repeat"
        android:title="@string/list_menu_repeat"
        android:icon="@drawable/ic_menu_repeat"/>
    <item android:id="@+id/menu_item_now_playing"
        android:title="@string/list_menu_now_playing"
        android:icon="@drawable/ic_menu_now_playing"/>
    <item android:id="@+id/menu_item_sleep_timer"
        android:title="@string/list_menu_sleep_timer"
        android:icon="@drawable/ic_menu_sleep_timer"/>
    <item android:id="@+id/menu_item_settings"
        android:title="@string/list_menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>


