<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ServeStream: A HTTP stream browser/player for Android
 * Copyright 2010 William Seemann
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <LinearLayout
        android:id="@+id/player_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/close"
            android:layout_width="56dip"
            android:layout_height="fill_parent"
            android:padding="4dip"
            android:scaleType="centerInside"
            android:background="@drawable/bg_actionbar_item"
            android:src="@drawable/icon" />

        <View
            android:layout_width="1dip"
            android:layout_height="26dip"
            android:background="#ff444444" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        	android:textSize="18sp"
        	android:textColor="#ffffffff"
       		android:ellipsize="marquee"
        	android:gravity="center_vertical"
        	android:paddingLeft="6dip"
        	android:paddingRight="6dip"
        	android:singleLine="true"
            android:layout_marginLeft="8dip"
            android:text="@string/title_url_list" />
        
    </LinearLayout>
    
    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        >
    
    	<Button android:id="@+id/go_button"
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_go_button"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            />

		<EditText
			android:id="@+id/front_quickconnect"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="http://"
			android:layout_toLeftOf="@+id/go_button"
			android:inputType="text"
			/>

	</RelativeLayout>
		
	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		/>

	<TextView
		android:id="@android:id/empty"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/list_stream_empty"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:gravity="center"
		/>

	<include layout="@layout/nowplaying" />
	
</LinearLayout>
